# RustPlayer

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  dynamic-lib.patch  radio.ini  setup.iss  vcpkg.json  vcpkg.json.bak
.github/workflows/: rust-release.yml  rust.yml
assets/: test.lrc
snap/: snapcraft.yaml
src/: app.rs  config.rs  main.rs
src/handler/: fs.rs  help.rs  mod.rs  music_controller.rs  player.rs  radio.rs
src/media/: media.rs  mod.rs  player.rs
src/ui/: effects.rs  frame.rs  fs.rs  help.rs  mod.rs  music_board.rs  play_list.rs  progress.rs  radio.rs
src/util/: event.rs  ffmpeg.rs  lyrics.rs  m3u8.rs  mod.rs  net.rs
tests/: ffmpeg.rs  lyrics.rs  m3u8.rs
